Fix overflow again

--- a/src/sass/_stack.scss
+++ b/src/sass/_stack.scss
@@ -26,10 +26,9 @@
 	}
 
 	> div {
-		position       : absolute;
-		inset-block-end: 1000vh;
-		pointer-events : none;
-		max-width      : 100%;
+		position      : absolute;
+		inset         : auto 0 999vh 0;
+		pointer-events: none;
 
 		opacity: 0;
 		> * { opacity: 0; }
